[package]
name = "phantasma-sdk"
version = "1.1.1"
edition = "2021"
rust-version = "1.74"
authors = ["Phantasma contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/phantasma-io/phantasma-sdk-rs"
homepage = "https://phantasma.io"
keywords = ["phantasma", "blockchain", "sdk", "carbon"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "encoding"]
description = "Rust SDK for the Phantasma blockchain with support for the Phoenix chain update"

[lib]
name = "phantasma_sdk"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bitflags = "2"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.8"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
